# FFT-Optimiziation

./: .gitignore  CMakeLists.txt  README.md
include/: bit_reverse.h  complex.h  cpu_timer.h  fft.h  fft_radix2.h  fft_radix4.h  helper.h  read_write_complex.h
src/: bit_reverse.cpp  cpu_timer.cpp  fft.cpp  fft.cu  fft_lloyd.cu  fft_lloyd_radix2.cu  fft_radix2.cpp  fft_radix4.cpp  main.cpp  read_write_complex.cpp
tests/: generate.py  input.txt  numpy_output.txt  output.txt
